--- a/app/src/main/res/menu/backups_menu.xml
+++ b/app/src/main/res/menu/backups_menu.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/help"
         android:orderInCategory="104"
-        android:title="Help"
+        android:title="@string/help"
         app:showAsAction="never"/>
 
 </menu>
