--- a/app/src/main/res/layout-sw411dp/fragment_date.xml
+++ b/app/src/main/res/layout-sw411dp/fragment_date.xml
@@ -63,9 +63,10 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/input"
                 android:layout_width="match_parent"
-                android:layout_height="400dp"
+                android:layout_height="0dp"
                 android:background="@color/darkColorPrimaryDark"
                 android:elevation="10dp"
+                app:layout_constraintHeight="parent=0.54"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent">
@@ -155,17 +156,38 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/dateLeftGuide"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.15" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/dateMiddleGuide"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.5" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/dateRightGuide"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.85" />
+
             <TextView
                 android:id="@+id/daysLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="40dp"
-                android:text="DAYS"
+                android:text="@string/days"
                 android:textAlignment="center"
                 android:textColor="#FFFFFF"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="@+id/monthsLabel"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/dateRightGuide"
+                app:layout_constraintStart_toStartOf="@+id/dateRightGuide"
                 app:layout_constraintTop_toTopOf="@+id/monthsLabel" />
 
             <TextView
@@ -173,25 +195,25 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="24dp"
-                android:text="MONTHS"
+                android:text="@string/months"
                 android:textAlignment="center"
                 android:textColor="#FFFFFF"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toTopOf="@+id/input"
-                app:layout_constraintEnd_toStartOf="@+id/daysLabel"
-                app:layout_constraintStart_toEndOf="@+id/yearsLabel" />
+                app:layout_constraintEnd_toStartOf="@+id/dateMiddleGuide"
+                app:layout_constraintStart_toStartOf="@+id/dateMiddleGuide" />
 
             <TextView
                 android:id="@+id/yearsLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="40dp"
-                android:text="YEARS"
+                android:text="@string/years"
                 android:textAlignment="center"
                 android:textColor="#FFFFFF"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="@+id/monthsLabel"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/dateLeftGuide"
+                app:layout_constraintStart_toStartOf="@+id/dateLeftGuide"
                 app:layout_constraintTop_toTopOf="@+id/monthsLabel" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
