--- a/app/src/main/res/layout-sw411dp-land/fragment_date.xml
+++ b/app/src/main/res/layout-sw411dp-land/fragment_date.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="662dp"
+            android:layout_width="match_parent"
             android:layout_height="413dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
