--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -6,7 +6,7 @@
 
         <SwitchPreference
             android:title="Dynamic Precision"
-            android:summary="Let TermCalc determine the number of decimal places to display based on your input."
+            android:summary="@string/dynamic_precision_description"
             android:key="isDynamic"
             android:disableDependentsState="true"
             android:icon="@drawable/ic_baseline_auto_awesome_24"
@@ -14,7 +14,7 @@
 
         <SeekBarPreference
             android:title="Maximum Decimal Places"
-            android:summary="Note: Some complex operations may take noticeably longer to complete if this value is greater than 10."
+            android:summary="@string/max_decimals_description"
             android:defaultValue="9"
             android:dependency="isDynamic"
             android:max="17"
@@ -46,7 +46,7 @@
 
         <SwitchPreference
             android:title="Live Expression Evaluation"
-            android:summary="Calculate and display expression results before pressing the equals button."
+            android:summary="@string/live_expression_description"
             android:key="showPreviousExpression"
             android:icon="@drawable/ic_baseline_history_24"
             android:defaultValue="true"/>
@@ -72,7 +72,7 @@
 
         <SwitchPreference
             android:title="Prioritize Coefficients"
-            android:summary="Ignore PEMDAS and prioritize evaluating coefficients in front of parentheses.\n(WARNING: Only enable this if you know what you're doing! Enabling this can yield incorrect calculation results)"
+            android:summary="@string/ignore_pemdas_description"
             android:key="prioritizeCoefficients"
             android:icon="@drawable/ic_round_warning_24"
             android:defaultValue="false"/>
