--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -5,7 +5,7 @@
         app:title="General">
 
         <SwitchPreference
-            android:title="Dynamic Precision"
+            android:title="@string/dynamic_precision"
             android:summary="@string/dynamic_precision_description"
             android:key="isDynamic"
             android:disableDependentsState="true"
@@ -13,7 +13,7 @@
             android:defaultValue="true"/>
 
         <SeekBarPreference
-            android:title="Maximum Decimal Places"
+            android:title="@string/max_decimal_places"
             android:summary="@string/max_decimals_description"
             android:defaultValue="9"
             android:dependency="isDynamic"
@@ -29,7 +29,7 @@
         app:title="Appearance">
 
         <SwitchPreference
-            android:title="Focus Mode"
+            android:title="@string/focus_mode"
             android:summary="@string/focus_summary"
             android:key="isFocus"
             android:icon="@drawable/ic_baseline_do_not_disturb_on_24"
@@ -41,11 +41,11 @@
             android:entryValues="@array/custom_fab_values"
             android:key="whereCustom"
             app:icon="@drawable/ic_function"
-            app:title="Show Custom Constants/Functions"
+            app:title="@string/show_constants_functions"
             app:useSimpleSummaryProvider="true" />
 
         <SwitchPreference
-            android:title="Live Expression Evaluation"
+            android:title="@string/live_expression_eval"
             android:summary="@string/live_expression_description"
             android:key="showPreviousExpression"
             android:icon="@drawable/ic_baseline_history_24"
@@ -62,7 +62,7 @@
             android:entryValues="@array/currency_values"
             android:key="fetchRate"
             app:icon="@drawable/ic_baseline_signal_cellular_alt_24"
-            app:title="When to Fetch Exchange Rates"
+            app:title="@string/exchange_rate_frequency_title"
             app:useSimpleSummaryProvider="true" />
 
     </PreferenceCategory>
@@ -71,7 +71,7 @@
         app:title="Advanced">
 
         <SwitchPreference
-            android:title="Prioritize Coefficients"
+            android:title="@string/prioritize_coefficients_title"
             android:summary="@string/ignore_pemdas_description"
             android:key="prioritizeCoefficients"
             android:icon="@drawable/ic_round_warning_24"
